--- a/TravelPlanner/app/build.gradle
+++ b/TravelPlanner/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 apply from: 'secrets.gradle'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -48,7 +48,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.5.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-alpha03"
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
     implementation "androidx.fragment:fragment-ktx:1.3.5"
     implementation 'com.microsoft.design:fluent-system-icons:1.1.134@aar'
 
