--- a/TravelPlanner/app/build.gradle
+++ b/TravelPlanner/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.travelplanner"
-        minSdkVersion 24
+        minSdkVersion 29 // was 24
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
