--- a/TwoNote/app/build.gradle
+++ b/TwoNote/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation googleDependencies.material
 
     implementation microsoftDependencies.fluent
+    // To use maven central version:
+    // implementation microsoftDependencies.inkView
+    // To use locally modified version:
     implementation project(path: ':ink')
 
     testImplementation testDependencies.junit
