--- a/SourceEditor/app/src/main/AndroidManifest.xml
+++ b/SourceEditor/app/src/main/AndroidManifest.xml
@@ -22,12 +22,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name="com.microsoft.device.display.wm_samples.sourceeditor.MainActivity"
-            android:label="@string/app_name">
+        <activity android:name=".SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Splash"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
