--- a/TwoNote/app/src/main/AndroidManifest.xml
+++ b/TwoNote/app/src/main/AndroidManifest.xml
@@ -20,12 +20,17 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name="com.microsoft.device.display.wm_samples.twonote.MainActivity"
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
 
         <provider
