--- a/FoldingVideo/app/src/main/AndroidManifest.xml
+++ b/FoldingVideo/app/src/main/AndroidManifest.xml
@@ -14,13 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoldingVideo">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.Splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
         </activity>
     </application>
 
