--- a/FoldingVideo/app/build.gradle
+++ b/FoldingVideo/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.example.foldingvideo"
         minSdkVersion 24
         targetSdkVersion 31
-        versionCode 3
-        versionName "3.0"
+        versionCode 4
+        versionName "4.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,11 +36,11 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'com.google.android.material:material:1.3.0'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
-    implementation 'androidx.window:window:1.0.0-beta04'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.window:window:1.0.0-rc01'
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
 
 
