--- a/TwoDo/app/build.gradle
+++ b/TwoDo/app/build.gradle
@@ -12,9 +12,9 @@ android {
     defaultConfig {
         applicationId 'com.microsoft.device.wm_samples.twodo'
         minSdkVersion 24
-        targetSdkVersion 30
-        versionCode 2
-        versionName "2.0"
+        targetSdkVersion 31
+        versionCode 3
+        versionName "3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,20 +41,20 @@ dependencies {
 //    def slidingpanelayout_version = '1.2.0-SNAPSHOT'
 //    implementation "androidx.slidingpanelayout:slidingpanelayout:$slidingpanelayout_version"
 
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
-    implementation 'androidx.window:window:1.0.0-beta02'
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-rc01"
+    implementation 'androidx.window:window:1.0.0-rc01'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:1.6.0"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation "androidx.appcompat:appcompat:1.3.1"
     implementation 'com.google.android.material:material:1.4.0'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    def room_version = "2.3.0"
+    def room_version = "2.4.0"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
