--- a/TravelPlanner/app/src/main/AndroidManifest.xml
+++ b/TravelPlanner/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:name="android.hardware.camera2"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TravelPlanner">
+        android:theme="@style/Theme.TravelPlanner"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".LaunchActivity"
             android:exported="true">
             <intent-filter>
