--- a/FoldingVideo/app/build.gradle
+++ b/FoldingVideo/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.example.foldingvideo"
         minSdkVersion 24
         targetSdkVersion 31
-        versionCode 4
-        versionName "4.0"
+        versionCode 5
+        versionName "5.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.window:window:1.0.0-rc01'
+    implementation 'androidx.window:window:1.0.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
 
 
