--- a/TwoNote/dependencies.gradle
+++ b/TwoNote/dependencies.gradle
@@ -32,7 +32,7 @@ ext {
     ktxCoreVersion = '1.3.2'
     ktxFragmentVersion = '1.3.6'
     ktxLifecycleVersion = '2.4.0'
-    windowManagerVersion = "1.0.0-rc01"
+    windowManagerVersion = "1.0.0"
 
     androidxDependencies = [
             appCompat       : "androidx.appcompat:appcompat:$appCompatVersion",
