--- a/FoldingVideoPlusTrivia/app/build.gradle
+++ b/FoldingVideoPlusTrivia/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.4"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
