--- a/.github/workflows/build_test_check.yml
+++ b/.github/workflows/build_test_check.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        projects: [ FoldingVideo, FoldingVideoPlusChat, PhotoEditor, EBookReader, PhotoEditor, SourceEditor, TravelPlanner, TwoDo, TwoNote ]
+        projects: [ FoldingVideo, FoldingVideoPlusChat, FoldingVideoPlusTrivia, PhotoEditor, EBookReader, PhotoEditor, SourceEditor, TravelPlanner, TwoDo, TwoNote ]
       fail-fast: false
 
     steps:
