--- a/PhotoEditor/dependencies.gradle
+++ b/PhotoEditor/dependencies.gradle
@@ -22,12 +22,12 @@ ext {
     ]
 
     //AndroidX versions
-    appCompatVersion = "1.2.0"
-    constraintLayoutVersion = "2.1.2"
+    appCompatVersion = '1.4.1'
+    constraintLayoutVersion = '2.1.3'
     recyclerViewVersion = "1.1.0"
     cardViewVersion = "1.0.0"
     ktxCoreVersion = "1.5.0"
-    ktxFragmentVersion = "1.3.6"
+    ktxFragmentVersion = '1.4.1'
     viewPager2Version = "1.0.0"
     windowManagerVersion = "1.0.0"
 
@@ -43,24 +43,24 @@ ext {
     ]
 
     //Google dependencies
-    materialVersion = "1.3.0"
+    materialVersion = '1.5.0'
 
     googleDependencies = [
             material: "com.google.android.material:material:$materialVersion"
     ]
 
     //Test dependencies version
-    junitVersion = "4.13"
+    junitVersion = '4.13.2'
 
     testDependencies = [
             junit: "junit:junit:$junitVersion"
     ]
 
     //Android test dependencies version
-    junitInstrumentationVersion = "1.1.1"
-    espressoCoreVersion = "3.2.0"
-    testRunnerVersion = "1.2.0"
-    testRulesVersion = "1.2.0"
+    junitInstrumentationVersion = '1.1.3'
+    espressoCoreVersion = '3.4.0'
+    testRunnerVersion = '1.4.0'
+    testRulesVersion = '1.4.0'
     uiautomatorVersion = "2.2.0"
     kotlinTestingVersion = "1.0.0-alpha2"
 
